WB-176: deleted old scout data